Pushing the changes for Self Help feature.

--- a/InvoiceManagement/Pages/Shared/_Layout.cshtml
+++ b/InvoiceManagement/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/InvoiceManagement.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="~/SelfHelpModule/SelfHelp.css" asp-append-version="true" />
+    <script src="~/SelfHelpModule/SelfHelp.js" asp-append-version="true"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
